--- a/pymaceuticals_starter.ipynb
+++ b/pymaceuticals_starter.ipynb
@@ -10,8 +10,11 @@
     "\n",
     "### Analysis\n",
     "\n",
-    "- Add your analysis here.\n",
-    " "
+    "1. Strong positive linear relationship\n",
+    "    A correlation coefficient of 0.84 indicates a strong positive linear relationship between mouse weight and average tumor volume, suggesting that as mouse weight increases, average tumor volume tends to increase as well. \n",
+    "\n",
+    "2. Sex does not change the effect of Regimen used.\n",
+    "    Both the male and female pie chart is at 50/50 split which shows that regimen does not have different effect based on the sex of the mouse.\n"
    ]
   },
   {
